<resources>
    <string name="app_name" translatable="false">MinTubeDark</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_youtube_player">YoutubePlayer</string>
    <string name="error_player">Unable to load.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_ytube_view">MinTubeView</string>
    <string name="add_ytube">MinTubeDark</string>

    <string name="svg_play">M8,5v14l11,-7z</string>
    <string name="svg_pause">M6,19h4V5H6v14zm8,-14v14h4V5h-4z</string>
    <string name="dialog_get_permission">Permit to Draw over other apps</string>
    <string name="string_get_permission">Allow this app to draw over other apps. This permission allows an app to display on the top of other apps you\'re using.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="repeat_type">REPEAT_TYPE</string>
    <string name="no_of_repeats">NO_OF_REPEATS</string>
    <string name="player_type">PLAYER_TYPE</string>
    <string name="init">INITIALIZED</string>
    <string name="title_activity_fullscreen_web_player">FullscreenWebPlayer</string>
    <string name="svg_arrow_up">M413.1,327.3l—1.8—2.1l—136—156.5c—4.6—5.3—11.5—8.6—19.2—8.6c—7.7,0—14.6,3.4—19.2,8.6L101,324.9l—2.3,2.6 \tC97,330,96,333,96,336.2c0,8.7,7.4,15.8,16.6,15.8v0h286.8v0c9.2,0,16.6—7.1,16.6—15.8C416,332.9,414.9,329.8,413.1,327.3z</string>
    <string name="FileName">SHAREDPREFERENCE_KEYFILE</string>
    <string name="action_search">search</string>
    <string name="search_hint">Search YouTube</string>
    <string name="videoQuality">VIDEO_QUALITY</string>
    <string name="finishOnEnd">FINISH_ON_END</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="count">COUNT</string>
    <string name="entire_width" />
    <string name="fullscreen" />
    <string name="next_video" />
    <string name="pause_play_video" />
    <string name="previous_video" />
    <string name="stop_service" />
    <string name="notification_thumbnail" />
    <string name="entire_width_large" />
    <string name="fullscreen_large" />
    <string name="next_video_large" />
    <string name="pause_play_video_large" />
    <string name="previous_video_large" />
    <string name="stop_service_large" />
    <string name="notification_thumbnail_large" />
    <string name="launcher" />
    <string name="put_in_search_box" />
    <string name="get_permission">Get Permission</string>
    <string name="retry">Retry</string>
    <string name="change_settings">Change Settings</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="exit">Exit</string>
    <string name="general_settings">General Settings</string>
    <string name="video_quality">Video Quality</string>
    <string name="_1080p">1080p</string>
    <string name="player_settings">Player Settings</string>
    <string name="web_player">Web Player</string>
    <string name="stop_if_nothing_is_playing">Stop if Nothing is playing</string>
    <string name="learn_more">Learn More</string>
    <string name="about">About</string>
    <string name="adhuugjzgbo">AdhUUgjZgbo</string>
    <string name="oyeuk8j8imi">oyEuk8j8imI</string>
    <string name="loading_title">Loading Title</string>
    <string name="loading_author">Loading Author</string>
    <string name="sample_text">Sample Text</string>
</resources>
