<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="7"
    android:alpha="0.9">

    <ImageView
        android:contentDescription="@string/notification_thumbnail"
        android:id="@+id/thumbnail"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.2"
        android:scaleType="centerCrop"
        android:src="@drawable/thumbnail"/>
    <TextView
        android:id="@+id/author"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight= "1.8"
        android:textColor="#ddd"
        android:textSize="12sp"
        android:layout_height="match_parent"
        android:text="@string/loading_author"
        android:alpha="0.9" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="3"
        android:alpha="0.9">
        <ImageView
            android:contentDescription="@string/pause_play_video"
            android:id="@+id/pause_play_video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_pause"
            android:layout_weight="1"/>
        <ImageView
            android:contentDescription="@string/next_video"
            android:id="@+id/next_video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_skip_next"
            android:layout_weight="1"/>
        <ImageView
            android:contentDescription="@string/stop_service"
            android:id="@+id/stop_service"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_stop"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>