<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:alpha="0.9">

    <ImageView
        android:contentDescription="@string/notification_thumbnail_large"
        android:id="@+id/thumbnail"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/thumbnail"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="#111111"
        android:alpha="0.9">
        <LinearLayout
            android:weightSum="20"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_weight="19.31"
                android:layout_height="50dp"
                android:padding="5dp"
                android:text="@string/loading_title"
                android:textSize="12sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="#fff"/>

            <ImageView
                android:contentDescription="@string/stop_service_large"
                android:id="@+id/stop_service"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|end"
                android:src="@drawable/ic_close"
                android:layout_weight="0.86" />
        </LinearLayout>
        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#ddd"
            android:textSize="12sp"
            android:text="@string/loading_author"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:contentDescription="@string/previous_video_large"
                android:id="@+id/previous_video"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_skip_previous"
                android:layout_weight="1"/>
            <ImageView
                android:contentDescription="@string/pause_play_video_large"
                android:id="@+id/pause_play_video"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pause"
                android:layout_weight="1"/>
            <ImageView
                android:contentDescription="@string/next_video_large"
                android:id="@+id/next_video"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_skip_next"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>